add chart functionality

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
             <div class="traffic-header">
                 <h3>Traffic</h3>
                 <ul class="traffic-nav">
-                    <li id="traffic-nav-link" class="hourly">Hourly</li>
-                    <li id="traffic-nav-link" class="daily">Daily</li>
-                    <li id="traffic-nav-link" class="weekly">Weekly</li>
-                    <li id="traffic-nav-link" class="monthly">Monthly</li>
+                    <li class="traffic-nav-link hourly">Hourly</li>
+                    <li class="traffic-nav-link daily">Daily</li>
+                    <li class="traffic-nav-link weekly">Weekly</li>
+                    <li class="traffic-nav-link monthly">Monthly</li>
                 </ul>
             </div>
             <div class="traffic-chart canvas-container-full">
