add messaging functionality

--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
         <div class="message-settings">
             <section class="message-user">
                 <h3>Message User</h3>
-                <form action="#" method="POST">
-                    <input class="form-field" type="text" name="user" id="user" placeholder="User's name">
-                    <textarea class="form-area" name="message" id="message" cols="30" rows="10" placeholder="Message for User"></textarea>
-                    <button class="button-style button-message" type="submit">Send</button>
+                <form action="" method="">
+                    <input class="form-field" type="text" name="user" id="userField" placeholder="User's name">
+                    <textarea class="form-area" name="message" id="messageField" cols="30" rows="10" placeholder="Message for User"></textarea>
+                    <button class="button-style button-message" type="submit" id="send">Send</button>
                 </form>
             </section>
 
