--- a/index.html
+++ b/index.html
@@ -18,16 +18,22 @@
             <div class="modal closed" id="modal">
                 <div class="modalContainer">
                     <div class="modalContent">
-                        <div class="modalBody">This is a notifaction that you have an email!</div>
-                        <button class="closeModal">&times;</button>
+                        <div class="modalBody">
+                            <p>This is a notifaction that you have an email 1!</p>
+                            <button class="closeModal">&times;</button>
+                        </div>
                     </div>
                     <div class="modalContent">
-                        <div class="modalBody">This is a notifaction that you have an email!</div>
-                        <button class="closeModal">&times;</button>
+                        <div class="modalBody">
+                            <p>This is a notifaction that you have an email 1!</p>
+                            <button class="closeModal">&times;</button>
+                        </div>
                     </div>
                     <div class="modalContent">
-                        <div class="modalBody">This is a notifaction that you have an email!</div>
-                        <button class="closeModal">&times;</button>
+                        <div class="modalBody">
+                            <p>This is a notifaction that you have an email 1!</p>
+                            <button class="closeModal">&times;</button>
+                        </div>
                     </div>
                 </div>
             </div>
