--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <h3>New Members</h3>
 
                 <div class="member-container">
-                    <img src="/images/member-1.jpg" alt=" " class="profile-img">
+                    <img src="images/member-1.jpg" alt=" " class="profile-img">
                     <div class="member-text">
                         <p>Victoria Chambers</p>
                         <a class="email" href="#">victoria.chambers@email.com</a>
@@ -203,7 +203,7 @@
                 </div>
 
                 <div class="member-container">
-                    <img src="/images/member-2.jpg" alt=" " class="profile-img">
+                    <img src="images/member-2.jpg" alt=" " class="profile-img">
                     <div class="member-text">
                         <p>Dale Byrd</p>
                         <a class="email" href="#">dale.byrd@email.com</a>
@@ -212,7 +212,7 @@
                 </div>
 
                 <div class="member-container">
-                    <img src="/images/member-3.jpg" alt=" " class="profile-img">
+                    <img src="images/member-3.jpg" alt=" " class="profile-img">
                     <div class="member-text">
                         <p>Dawn Wood</p>
                         <a class="email" href="#">dawn.wood@email.com</a>
@@ -221,7 +221,7 @@
                 </div>
 
                 <div class="member-container">
-                    <img src="/images/member-4.jpg" alt=" " class="profile-img">
+                    <img src="images/member-4.jpg" alt=" " class="profile-img">
                     <div class="member-text">
                         <p>Dan Oliver</p>
                         <a class="email" href="#">dan.oliver@email.com</a>
@@ -235,7 +235,7 @@
                 <h3>Recent Activity</h3>
 
                 <div class="member-container">
-                    <img src="/images/member-1.jpg" alt=" " class="profile-img">
+                    <img src="images/member-1.jpg" alt=" " class="profile-img">
                     <div class="member-text">
                         <p>Victoria Chambers commented on Your App's SEO Tips</p>
                         <p>4 hours ago</p>
@@ -243,7 +243,7 @@
                 </div>
 
                 <div class="member-container">
-                    <img src="/images/member-2.jpg" alt=" " class="profile-img">
+                    <img src="images/member-2.jpg" alt=" " class="profile-img">
                     <div class="member-text">
                         <p>Dale Byrd liked the post Facebook's Policy Updates for 2020</p>
                         <p>5 hours ago</p>
@@ -251,7 +251,7 @@
                 </div>
 
                 <div class="member-container">
-                    <img src="/images/member-3.jpg" alt=" " class="profile-img">
+                    <img src="images/member-3.jpg" alt=" " class="profile-img">
                     <div class="member-text">
                         <p>Dawn Wood commented on Facebook's Policy Updates for 2020</p>
                         <p>5 hours ago</p>
@@ -259,7 +259,7 @@
                 </div>
 
                 <div class="member-container">
-                    <img src="/images/member-4.jpg" alt=" " class="profile-img">
+                    <img src="images/member-4.jpg" alt=" " class="profile-img">
                     <div class="member-text">
                         <p>Dan Oliver posted YourApp's SEO Tips</p>
                         <p>1 day ago</p>
